Bugfix for select spacing

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1220,7 +1220,6 @@ formly-list-section .form-array > formly-field > formly-group {
   }
   select {
     margin-left: 0;
-    margin-right: 0;
   }
 }
 
